clang/test/BSC/Negative/Ownership/string_literal_borrow_error.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

// Test error cases for mutable _Borrow of string literals

void foo_mut(char * _Borrow str) {}
void test_mut_param() {
  foo_mut("hello");  // expected-error {{cannot pass string literal to parameter of type 'char *_Borrow'; string literals are immutable}}
}

void test_direct_mut() {
  const char * _Borrow p = &mut "hello";  // expected-error {{cannot take mutable borrow of string literal with '&mut'; string literals are immutable}}
}

void test_indirect_mut() {
  const char * _Borrow p = &mut * "hello";  // expected-error {{cannot take mutable borrow through string literal with '&mut *'; string literals are immutable}}
}

void test_indirect_mut_via_var() {
  const char *value = "hello";
  const char * _Borrow p = &mut * value;  // expected-error {{the expression after '&mut' must be modifiable}}
}

int main() {
  test_mut_param();
  test_direct_mut();
  test_indirect_mut();
  test_indirect_mut_via_var();
  return 0;
}
